--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container">
-      <a class="navbar-brand page-scroll" href="#home"><img src="image/LOGO.png"></a>
+      <a class="navbar-brand page-scroll" href="#home"><img src="image/icon/LOGO.jpeg"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -66,7 +66,63 @@
 
 
   <!-- LAYANAN KAMI  -->
+  <div class="panel-pelayanan" id="panel-pelayanan">
+    <div class="container">
+      <h2 class="pk"><strong>PELAYANAN KAMI</strong></h2>
 
+      <div class="row mb-4">
+        <div class="col-md-4 text-right">
+          <h3>Praktis</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
+            ad,</p>
+        </div>
+        <div class="col-md-2">
+          <img src="image/icon/praktis.png" alt="praktis">
+        </div>
+      </div>
+      <div class="row mb-4">
+        <div class="col-md-2 offset-6">
+          <img src="image/icon/time.png" alt="time">
+        </div>
+        <div class="col-md-4 text-left">
+          <h3>Hemat Waktu</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
+            ad,</p>
+        </div>
+      </div>
+      <div class="row mb-4">
+        <div class="col-md-4 text-right">
+          <h3>Garansi Kualitas</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
+            ad,</p>
+        </div>
+        <div class="col-md-2">
+          <img src="image/icon/guarantee.png" alt="guarantee">
+        </div>
+      </div>
+      <div class="row mb-4">
+        <div class="col-md-2 offset-6">
+          <img src="image/icon/demand.png" alt="demand">
+        </div>
+        <div class="col-md-4 text-left">
+          <h3>On Demand Service</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
+            ad,</p>
+        </div>
+      </div>
+      <div class="row mb-4">
+        <div class="col-md-4 text-right">
+          <h3>Order Malam Hari</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
+            ad,</p>
+        </div>
+        <div class="col-md-2">
+          <img src="image/icon/delivery.png" alt="delivery">
+        </div>
+      </div>
+
+    </div>
+  </div>
 
 
 
@@ -177,7 +233,7 @@
       <div class="row">
         <div class="col-md-3">
           <h2><strong>Tentang Kami</strong></h2>
-          <p>Kami Hadir sebagai pasar tradisional yang telah merambah ke sistem online, sehingga memudahkan customer
+          <p>Kami Hadir sebagai pasar tradisional yang telah merambah ke sistem online, sehingga memudahkan masyarakat
             dalam berbelanja dipasar tradisional</p>
         </div>
         <div class="col-md-2">
@@ -198,21 +254,23 @@
           <br>
           <a href="">Seafood</a>
           <br>
-          <a href="">Bumbu Dapur</a>
-          <br>
           <a href="">Sembako</a>
           <br>
-          <a href="">Jajanan</a>
+          <a href="">Bumbu Dapur</a>
+          <br>
+          <a href="">Snack</a>
         </div>
         <div class="col-md-3">
-          <a class="footer-brand" href="index.php"><img src="image/LOGO.png" alt="logo"></a>
-          <p>Copyright © 2019 Tumbasno, All Rights Reseverd</p> <br>
+          <br>
+          <a class="footer-brand" href="index.php"><img src="image/icon/LOGO.jpeg" alt="logo"></a>
+          <br><br><br>
+          <p>Copyright © 2019 Tumbasno, All Rights Reseverd</p>
           <p>Find Us on Social Media</p>
           <a href="#"><img src="image/icon/ig.png" alt="IG" class="sf"></a>
-          <a href="#"><img src="image/icon/fb.png" alt="LINE" class="sf"></a>
+          <a href="#"><img src="image/icon/fb.png" alt="fb" class="sf"></a>
+          <a href="#"><img src="image/icon/line.png" alt="line" class="sf"></a>
           <a href="#"><img src="image/icon/wa.png" alt="WA" class="sf"></a>
-          <a href="#"><img src="image/icon/line.png" alt="WA" class="sf"></a>
-          <a href="#"><img src="image/icon/email.png" alt="WA" class="sf"></a>
+          <a href="#"><img src="image/icon/email.png" alt="email" class="sf"></a>
         </div>
       </div>
     </div>
