--- a/index.html
+++ b/index.html
@@ -110,28 +110,96 @@
           <p>More</p>
         </div>
       </div>
-      <div class="gallery">
-        <a target="_blank">
-          <img src="image/p1.jpeg" alt="Cinque Terre" width="500" height="300">
-        </a>
-        <div class="desc">Ubi Ungu</div>
-        <div class="harga">Rp. 000</div>
+      <!-- Produk -->
+      <div class="row codepen-hovercards" style="margin-top: 50px; padding: 10px;">
+        <div class="col-2">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
       </div>
-      <div class="gallery">
-        <a target="_blank">
-          <img src="image/p1.jpeg" alt="Cinque Terre" width="500" height="300">
-        </a>
-        <div class="desc">Ubi Ungu</div>
-        <div class="harga">Rp. 000</div>
+
+      <div class="row codepen-hovercards" style="margin-top: 50px; padding: 10px;">
+        <div class="col-2">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
       </div>
-      <div class="gallery">
-        <a target="_blank">
-          <img src="image/p1.jpeg" alt="Cinque Terre" width="500" height="300">
-        </a>
-        <div class="desc">Ubi Ungu</div>
-        <div class="harga">Rp. 000</div>
-      </div>
-    </div>
 
 
   </div>
