--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
           <p>More</p>
         </div>
       </div>
+
       <div class="gallery">
         <a target="_blank">
           <img src="image/p1.jpeg" alt="Cinque Terre" width="500" height="300">
@@ -191,11 +192,54 @@
 
 
   <!-- TESTIMONIAL -->
-  <div class="panel-review" id="panel-contact">
-    <div class="container-fluid">
-      <h2 class="kk"><strong>TESTIMONIAL</strong></h2>
+  <div class="panel-review" id="panel-review">
+    <div class="bd-example">
+      <h2 class="kk text-center"><strong>TESTIMONIAL</strong></h2>
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner">
+          <div class="item carousel-item active">
+            <div class="img-box"><img src="image/female_avatar.svg" alt=""></div><br>
+            <p class="overview"><b>Paula Wilson</b>, Ibu Rumah Tangga</p>
+            <p class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius
+              quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante. Idac bibendum
+              scelerisque non non purus. Suspendisse varius nibh non aliquet.</p>
+          </div>
+
+          <div class="item carousel-item">
+            <div class="img-box"><img src="image/male_avatar.svg" alt=""></div><br>
+            <p class="overview"><b>Antonio Moreno</b>, Pedagang Pasar</p>
+            <p class="testimonial">Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi
+              suscipit tincidunt. Utmtc tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse
+              potenti. Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
+          </div>
+
+          <div class="item carousel-item">
+            <div class="img-box"><img src="image/male_avatar.svg" alt=""></div><br>
+            <p class="overview"><b>Antonio Moreno</b>, Karyawan</p>
+            <p class="testimonial">Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi
+              suscipit tincidunt. Utmtc tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse
+              potenti. Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
   </div>
+
 
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog">
