--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tumbasno</title>
-  <link rel="icon" type="image/png" href="image/icon/logo.png" /> <!-- Menampilkan ikon pada Tab bar -->
+  <link rel="icon" type="image/png" href="image/icon/SLOGO.jpeg" /> <!-- Menampilkan ikon pada Tab bar -->
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
