--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container">
-      <a class="navbar-brand page-scroll" href="#home"><img src="image/icon/LOGO.jpeg"></a>
+      <a class="navbar-brand page-scroll" href="index.html"><img src="image/icon/LOGO.jpeg"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -165,10 +165,10 @@
 
       <!-- List Produk -->
       <div class="row codepen-hovercards" style="margin-top: 50px; padding: 10px;">
-        <div class="col-2">
+        <div class="col-md-2 offset-1">
           <div class="hovercard">
             <div class="card">
-              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <img src="image/produk/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
                 <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
                 <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
@@ -179,10 +179,10 @@
             </a>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-md-2">
           <div class="hovercard">
             <div class="card">
-              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <img src="image/produk/tomat.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
                 <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
                 <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
@@ -193,10 +193,10 @@
             </a>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-md-2">
           <div class="hovercard">
             <div class="card">
-              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <img src="image/produk/Sapi.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
                 <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
                 <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
@@ -207,10 +207,10 @@
             </a>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-md-2">
           <div class="hovercard">
             <div class="card">
-              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <img src="image/produk/udang.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
                 <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
                 <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
@@ -221,24 +221,10 @@
             </a>
           </div>
         </div>
-        <div class="col-2">
+        <div class="col-md-2">
           <div class="hovercard">
             <div class="card">
-              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
-              <div class="card-body">
-                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
-              </div>
-            </div>
-            <a href="#" class="hovercard-overlay">
-              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
-            </a>
-          </div>
-        </div>
-        <div class="col-2">
-          <div class="hovercard">
-            <div class="card">
-              <img src="image/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <img src="image/produk/mangga.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
                 <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
                 <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
@@ -250,6 +236,81 @@
           </div>
         </div>
       </div>
+      <div class="row codepen-hovercards" style="margin-top: 50px; padding: 10px;">
+        <div class="col-md-2 offset-1">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/produk/cabe.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/produk/jamur.png" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/produk/kelepon.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/produk/onde.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="hovercard">
+            <div class="card">
+              <img src="image/produk/beras.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <div class="card-body">
+                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+              </div>
+            </div>
+            <a href="#" class="hovercard-overlay">
+              <span class="button _inverse" style="background-color: red; font-weight: bold; width: 80px;">Buy</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <br><br>
+      <a class="btn btn-light button" href="produk.html">Belanja Sekarang</a>
 
     </div>
   </div>
