--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container">
       <h2 class="pk"><strong>PELAYANAN KAMI</strong></h2>
 
-      <div class="row mb-4">
+      <div class="row mb-4 p1">
         <div class="col-md-4 text-right">
           <h3>Praktis</h3>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
@@ -80,7 +80,7 @@
           <img src="image/icon/praktis.png" alt="praktis">
         </div>
       </div>
-      <div class="row mb-4">
+      <div class="row mb-4 p2">
         <div class="col-md-2 offset-6">
           <img src="image/icon/time.png" alt="time">
         </div>
@@ -90,7 +90,7 @@
             ad,</p>
         </div>
       </div>
-      <div class="row mb-4">
+      <div class="row mb-4 p3">
         <div class="col-md-4 text-right">
           <h3>Garansi Kualitas</h3>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
@@ -100,7 +100,7 @@
           <img src="image/icon/guarantee.png" alt="guarantee">
         </div>
       </div>
-      <div class="row mb-4">
+      <div class="row mb-4 p4">
         <div class="col-md-2 offset-6">
           <img src="image/icon/demand.png" alt="demand">
         </div>
@@ -110,7 +110,7 @@
             ad,</p>
         </div>
       </div>
-      <div class="row mb-4">
+      <div class="row mb-4 p5">
         <div class="col-md-4 text-right">
           <h3>Order Malam Hari</h3>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
@@ -155,7 +155,7 @@
         </div>
         <div class="col-md-1 ck2">
           <a href=""><img src="image/icon/snack.png" class="rounded-circle" alt="snack"></a>
-          <p>Snack</p>
+          <p>Jajanan</p>
         </div>
         <div class="col-md-1 ck3">
           <a href=""><img src="image/icon/more.png" class="rounded-circle" alt="more"></a>
@@ -168,7 +168,7 @@
         <div class="col-md-2 offset-1">
           <div class="hovercard">
             <div class="card">
-              <img src="image/produk/p1.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
+              <img src="image/produk/ubi.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
                 <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
                 <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
@@ -309,7 +309,7 @@
         </div>
       </div>
 
-      <br><br>
+      <br><br><br>
       <a class="btn btn-light button" href="produk.html">Belanja Sekarang</a>
 
     </div>
