--- a/produk.html
+++ b/produk.html
@@ -78,7 +78,7 @@
         </div>
         <div class="col-md-1 ck2">
           <a href=""><img src="image/icon/snack.png" class="rounded-circle" alt="snack"></a>
-          <p>Snack</p>
+          <p>Jajanan</p>
         </div>
         <div class="col-md-1 ck3">
           <a href=""><img src="image/icon/more.png" class="rounded-circle" alt="more"></a>
