--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <img src="image/produk/ubi.jpeg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
                 <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp 25000</p>
               </div>
             </div>
             <a href="#" class="hovercard-overlay">
@@ -184,8 +184,8 @@
             <div class="card">
               <img src="image/produk/tomat.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
-                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+                <p class="card-text" style="color: black; margin-top: -20px;">Tomat</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp 2000</p>
               </div>
             </div>
             <a href="#" class="hovercard-overlay">
@@ -198,8 +198,8 @@
             <div class="card">
               <img src="image/produk/Sapi.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
-                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+                <p class="card-text" style="color: black; margin-top: -20px;">Daging Sapi</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp 100000</p>
               </div>
             </div>
             <a href="#" class="hovercard-overlay">
@@ -212,8 +212,8 @@
             <div class="card">
               <img src="image/produk/udang.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
-                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+                <p class="card-text" style="color: black; margin-top: -20px;">Udang</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp 45000</p>
               </div>
             </div>
             <a href="#" class="hovercard-overlay">
@@ -226,8 +226,8 @@
             <div class="card">
               <img src="image/produk/mangga.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
-                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+                <p class="card-text" style="color: black; margin-top: -20px;">Mangga</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp 15000</p>
               </div>
             </div>
             <a href="#" class="hovercard-overlay">
@@ -242,8 +242,8 @@
             <div class="card">
               <img src="image/produk/cabe.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
-                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+                <p class="card-text" style="color: black; margin-top: -20px;">Cabe Merah</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp 5000</p>
               </div>
             </div>
             <a href="#" class="hovercard-overlay">
@@ -256,8 +256,8 @@
             <div class="card">
               <img src="image/produk/jamur.png" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
-                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+                <p class="card-text" style="color: black; margin-top: -20px;">Jamur</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp 20000</p>
               </div>
             </div>
             <a href="#" class="hovercard-overlay">
@@ -270,8 +270,8 @@
             <div class="card">
               <img src="image/produk/kelepon.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
-                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+                <p class="card-text" style="color: black; margin-top: -20px;">Kelepon</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp 2000</p>
               </div>
             </div>
             <a href="#" class="hovercard-overlay">
@@ -284,8 +284,8 @@
             <div class="card">
               <img src="image/produk/onde.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
-                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+                <p class="card-text" style="color: black; margin-top: -20px;">Onde-Onde</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp 1000</p>
               </div>
             </div>
             <a href="#" class="hovercard-overlay">
@@ -298,8 +298,8 @@
             <div class="card">
               <img src="image/produk/beras.jpg" class="card-img-top" alt="..." style="width: 200px; height: 150px;">
               <div class="card-body">
-                <p class="card-text" style="color: black; margin-top: -20px;">Ubi Ungu</p>
-                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp. 000</p>
+                <p class="card-text" style="color: black; margin-top: -20px;">Beras</p>
+                <p class="card-text" style="color: black; margin-top: -20px; font-weight: bold;">Rp 50000</p>
               </div>
             </div>
             <a href="#" class="hovercard-overlay">
