--- a/produk.html
+++ b/produk.html
@@ -102,7 +102,14 @@
         </div>
 
         <div class="cart">
-          <h4>Keranjang Belanja</h4>
+          <table>
+            <tr>
+              <td>
+                <h4>Keranjang Belanja</h4>
+              </td>
+              <th><i class="fas fa-shopping-cart" style="width: 45px; height: 45px;"></i></th>
+            </tr>
+          </table>
           <br>
 
           <table>
