--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <!-- <span class="nav-item nav-link active page-scroll" href="#home">Home <span class="sr-only">(current)</span></a> -->
           <a class="nav-item nav-link page-scroll" href="#panel-pelayanan">LAYANAN KAMI</a>
           <a class="nav-item nav-link page-scroll" href="#panel-produk">PRODUK KAMI</a>
-          <a class="nav-item nav-link page-scroll" href="#panel-contact">TESTIMONIAL</a>
+          <a class="nav-item nav-link page-scroll" href="#panel-review">TESTIMONIAL</a>
           <a class="nav-item btn btn-light button" data-toggle="modal" data-target="#exampleModal">Login</a>
         </div>
       </div>
@@ -373,7 +373,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color: black;"><i
-              class="fa fa-times" aria-hidden="true"></i></button>
+              class="fas fa-window-close" aria-hidden="true"></i></button>
         </div>
         <div class="modal-body">
           <form>
