--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
       <div class="row mb-4 p1">
         <div class="col-md-4 text-right">
           <h3>Praktis</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
-            ad,</p>
+          <p>Belanja ke Pasar menjadi lebih mudah. Nikmati Promo tiap bulanannya</p>
         </div>
         <div class="col-md-2">
           <img src="image/icon/praktis.png" alt="praktis">
@@ -86,15 +85,14 @@
         </div>
         <div class="col-md-4 text-left">
           <h3>Hemat Waktu</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
-            ad,</p>
+          <p>Meluangkan waktu dengan keluarga menjadi lebih lama, urusan belanjamu kami yang urus.</p>
         </div>
       </div>
       <div class="row mb-4 p3">
         <div class="col-md-4 text-right">
           <h3>Garansi Kualitas</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
-            ad,</p>
+          <p>Jika kamu tidak puas dengan kualitas barang dari kami, kami akan menggantinya (Claim di hari yang sama).
+          </p>
         </div>
         <div class="col-md-2">
           <img src="image/icon/guarantee.png" alt="guarantee">
@@ -106,15 +104,14 @@
         </div>
         <div class="col-md-4 text-left">
           <h3>On Demand Service</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
-            ad,</p>
+          <p>Batas waktu order sampai jam 08.00 pagi (diatas jam 08.00 pagi, akan diantar besok pagi). Maksimal
+            pengantaran jam 11.00 siang.</p>
         </div>
       </div>
       <div class="row mb-4 p5">
         <div class="col-md-4 text-right">
           <h3>Order Malam Hari</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptates odio inventore, velit iure nobis
-            ad,</p>
+          <p>Kamu bisa request jam pengantaran, jika Anda pesan pada hari sebelumnya.</p>
         </div>
         <div class="col-md-2">
           <img src="image/icon/delivery.png" alt="delivery">
