--- a/produk.html
+++ b/produk.html
@@ -90,12 +90,12 @@
 
       <div class="tumbas" id="tumbas">
         <div class="listproduk">
-          <div class="listprodukcard" v-for="produkku in produk">
+          <div class="listprodukcard" v-for="p in produk">
             <div class="thumbnail">
-              <img v-bind:src="produkku.foto" style="width: 100%; height: 150px;">
-              <p>Rp {{produkku.harga}}</p>
-              <h5>{{produkku.nama_produk}}</h5>
-              <button class="btn btn-light button1" v-on:click="addCart(produkku.foto,produkku.harga)"
+              <img v-bind:src="p.image" style="width: 100%; height: 150px;">
+              <p>Rp {{p.harga}}</p>
+              <h5>{{p.nama_produk}}</h5>
+              <button class="btn btn-light button1" v-on:click="addCart(p.nama_produk, p.image, p.harga)"
                 type="button">Beli</button>
             </div>
           </div>
@@ -113,14 +113,15 @@
           <br>
 
           <table>
-            <tr v-for="nama_produk in keranjangmerek">
+            <tr v-for="k in keranjang">
               <td>
-                <img v-bind:src="nama_produk" width="125px" height="100px">
+                <img v-bind:src="k.image" width="125px" height="100px">
               </td>
+              <td>{{k.nama_produk}}</td>
+              <td>{{k.harga}}</td>
               <td><button class="btn btn-light button1" v-on:click="removeCart(index)" type="button">X</button></td>
             </tr>
           </table>
-          <!-- {{total}} -->
         </div>
       </div>
 
@@ -184,7 +185,8 @@
       data: {
         produk: [],
         keranjangharga: [],
-        keranjangmerek: [],
+        keranjang: [],
+        qty: 0
       },
 
       computed: {
@@ -196,16 +198,22 @@
       },
 
       methods: {
-        addCart: function (nama_produk, harga) {
+        addCart: function (nama_produk, image, harga) {
+          this.keranjang.push({
+            nama_produk: nama_produk,
+            harga: harga,
+            image: image
+          });
           this.keranjangharga.push(harga);
-          this.keranjangmerek.push(nama_produk);
+          this.qty += 1
         },
         removeCart: function (index) {
-          this.keranjangmerek.splice(index, 1)
+          this.keranjang.splice(index, 1)
           this.keranjangharga.splice(index, 1)
+          this.qty -= 1
         },
         upDate: function () {
-          axios.get('http://localhost:8080/GUI/OnlineClass/VueJS_AjaxAxios_MySQL/api.php').then(response => this
+          axios.get('http://localhost:8080/GUI/UAS/api.php').then(response => this
             .produk = response.data['result'])
         }
       },
